03/10/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.911 'Marshal West':
	- memory management improvements;
	- socket logging improvements;
	- debug info added to CentOS and Fedora RPMs.
	- TCP buffer size increased.
	
03/09/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.910 'Marshal West':
	- Log messages extended and cleaned.
	- Some memory cleaning.
	
03/02/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.9 'Marshal West':
	- Issue 113 fixed (TCP rate limit fixed);
	- Issue 114 fixed (TCP stability).

02/18/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.8 'Marshal West':
	- Issue 102: SO_BSDCOMPAT socket option removed;
	- Issue 104: check for the REALM attribute value;
	- Issue 105: no-cli segfault fixed;
	- Issue 106: MESSAGE-INTEGRITY removed from DATA indication;
	- Issue 108: Server should return 438 on unknown nonce;
	- Issue 109: make the random functions stronger (mostly for
	transaction ID and for nonce);
	- Issue 111: fix valgrind warning on memory initialization.
	- Issue 112: RTCP sockets logging.

02/12/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.7 'Marshal West':
	- Possible indefinite cycle fixed in TCP/TCP routing (Issue 99);
	- Address 0.0.0.0 can be used as a listener address (Issue 100);
	- DHCP-configured servers supported (Issue 101);

02/04/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.6 'Marshal West':
	- Channel traffic memory copy elimination.
	- Send indication memory copy elimination.
	- DTLS traffic processing memory copy eliminated.
	- Mobility forbidden error code number fixed - according to the new draft document.
	- getsockname() usage minimized.
	- port allocation improved.
	- default relay behavior fixed (when no relay addresses defined).
	- atomic create permission request handling (Issue 97).

01/25/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.5 'Marshal West':
- code optimization.

01/24/2014 Oleg Moskalenko <mom040267@gmail.com>